--- a/css/color-style-dark.css
+++ b/css/color-style-dark.css
@@ -1,4 +1,8 @@
 body {
-    background-color: #333;
-    color: #fff;
+    background-color: #242424;
+    color: rgb(163, 23, 176);
+    transition: background-color 0.5s ease;
+}
+.content {
+    background: #0b1d26;
 }
