--- a/css/color-style-light.css
+++ b/css/color-style-light.css
@@ -1,4 +1,8 @@
 body {
     background-color: #f4f4f4;
     color: #333;
+    transition: background-color 0.5s ease;
+}
+.content {
+    background: #0b1d26;
 }
